--- a/L2.html
+++ b/L2.html
@@ -69,8 +69,16 @@ ul.task-list li input[type="checkbox"] {
   </ul></li>
   <li><a href="#exercício-2." id="toc-exercício-2." class="nav-link" data-scroll-target="#exercício-2.">Exercício 2.</a></li>
   <li><a href="#exercício-3." id="toc-exercício-3." class="nav-link" data-scroll-target="#exercício-3.">Exercício 3.</a></li>
-  <li><a href="#exercício-4." id="toc-exercício-4." class="nav-link" data-scroll-target="#exercício-4.">Exercício 4.</a></li>
-  <li><a href="#exercício-5." id="toc-exercício-5." class="nav-link" data-scroll-target="#exercício-5.">Exercício 5.</a></li>
+  <li><a href="#exercício-4." id="toc-exercício-4." class="nav-link" data-scroll-target="#exercício-4.">Exercício 4.</a>
+  <ul class="collapse">
+  <li><a href="#item-4a." id="toc-item-4a." class="nav-link" data-scroll-target="#item-4a.">Item 4a.</a></li>
+  <li><a href="#item-4b." id="toc-item-4b." class="nav-link" data-scroll-target="#item-4b.">Item 4b.</a></li>
+  </ul></li>
+  <li><a href="#exercício-5." id="toc-exercício-5." class="nav-link" data-scroll-target="#exercício-5.">Exercício 5.</a>
+  <ul class="collapse">
+  <li><a href="#item-5a." id="toc-item-5a." class="nav-link" data-scroll-target="#item-5a.">Item 5a.</a></li>
+  <li><a href="#item-5b." id="toc-item-5b." class="nav-link" data-scroll-target="#item-5b.">Item 5b.</a></li>
+  </ul></li>
   <li><a href="#exercício-6." id="toc-exercício-6." class="nav-link" data-scroll-target="#exercício-6.">Exercício 6.</a></li>
   <li><a href="#exercício-7." id="toc-exercício-7." class="nav-link" data-scroll-target="#exercício-7.">Exercício 7.</a></li>
   </ul></li>
@@ -172,7 +180,7 @@ ul.task-list li input[type="checkbox"] {
 <div class="cell-output-display">
 
 <div class="datatables html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-058590386ba5d2202e7e" style="width:100%;height:auto;"></div>
-<script type="application/json" data-for="htmlwidget-058590386ba5d2202e7e">{"x":{"filter":"none","vertical":false,"class":"display","extensions":["FixedHeader"],"caption":"<caption>Tabela 1: Informações dos gráficos R e Xbarra para Questão 2.<\/caption>","data":[["Linha Central","LIC","LSC"],[1,0,4.93],[500,498.66,501.34],[2.34,0,4.96],[499.86,498.51,501.21]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th colspan=\"1\"><\/th>\n      <th colspan=\"2\">Com Especificações<\/th>\n      <th colspan=\"2\">Sem Especificações<\/th>\n    <\/tr>\n    <tr>\n      <th><\/th>\n      <th>R<\/th>\n      <th>Xbarra<\/th>\n      <th>R<\/th>\n      <th>Xbarra<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"dom":"t","fixedHeader":true,"autoWidth":false,"columnDefs":[{"targets":1,"render":"function(data, type, row, meta) {\n    return type !== 'display' ? data : DTWidget.formatRound(data, 2, 3, \".\", \",\", null);\n  }"},{"targets":2,"render":"function(data, type, row, meta) {\n    return type !== 'display' ? data : DTWidget.formatRound(data, 2, 3, \".\", \",\", null);\n  }"},{"targets":3,"render":"function(data, type, row, meta) {\n    return type !== 'display' ? data : DTWidget.formatRound(data, 2, 3, \".\", \",\", null);\n  }"},{"targets":4,"render":"function(data, type, row, meta) {\n    return type !== 'display' ? data : DTWidget.formatRound(data, 2, 3, \".\", \",\", null);\n  }"},{"className":"dt-center","targets":[1,2,3,4]},{"orderable":false,"targets":0}],"order":[],"orderClasses":false}},"evals":["options.columnDefs.0.render","options.columnDefs.1.render","options.columnDefs.2.render","options.columnDefs.3.render"],"jsHooks":[]}</script>
+<script type="application/json" data-for="htmlwidget-058590386ba5d2202e7e">{"x":{"filter":"none","vertical":false,"class":"display","extensions":["FixedHeader"],"caption":"<caption>Tabela 1: Informações dos gráficos R e Xbarra para Questão 2.<\/caption>","data":[["Linha Central","LIC","LSC"],[1,0,4.93],[500,498.66,501.34],[2.34,0,4.96],[499.86,498.51,501.21]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th colspan=\"1\"><\/th>\n      <th colspan=\"2\">Com Especificações<\/th>\n      <th colspan=\"2\">Sem Especificações<\/th>\n    <\/tr>\n    <tr>\n      <th><\/th>\n      <th>R<\/th>\n      <th>Xbarra<\/th>\n      <th>R<\/th>\n      <th>Xbarra<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"dom":"t","fixedHeader":false,"autoWidth":false,"columnDefs":[{"targets":1,"render":"function(data, type, row, meta) {\n    return type !== 'display' ? data : DTWidget.formatRound(data, 2, 3, \".\", \",\", null);\n  }"},{"targets":2,"render":"function(data, type, row, meta) {\n    return type !== 'display' ? data : DTWidget.formatRound(data, 2, 3, \".\", \",\", null);\n  }"},{"targets":3,"render":"function(data, type, row, meta) {\n    return type !== 'display' ? data : DTWidget.formatRound(data, 2, 3, \".\", \",\", null);\n  }"},{"targets":4,"render":"function(data, type, row, meta) {\n    return type !== 'display' ? data : DTWidget.formatRound(data, 2, 3, \".\", \",\", null);\n  }"},{"className":"dt-center","targets":[1,2,3,4]},{"orderable":false,"targets":0}],"order":[],"orderClasses":false}},"evals":["options.columnDefs.0.render","options.columnDefs.1.render","options.columnDefs.2.render","options.columnDefs.3.render"],"jsHooks":[]}</script>
 </div>
 </div>
 </section>
@@ -186,6 +194,7 @@ ul.task-list li input[type="checkbox"] {
 <p><img src="L2_files/figure-html/unnamed-chunk-2-1.png" class="img-fluid" width="864"></p>
 </div>
 </div>
+<p>Após a construção do gráfico é possível constatar que o processo está fora de controle, pois a amostra de numero 12 ultrapassa o limite inferior no gráfico <span class="math inline">\(\bar{X}\)</span>, caracterizando uma mudança na média do processo, ou seja, levando em consideração as <strong>regras de sensibilidade</strong>, o gráfico <span class="math inline">\(\bar{X}\)</span> fere ao primeiro teste que avalia os pontos que caem fora dos limites de controle.</p>
 </section>
 <section id="exercício-4." class="level2">
 <h2 class="anchored" data-anchor-id="exercício-4.">Exercício 4.</h2>
@@ -194,6 +203,39 @@ ul.task-list li input[type="checkbox"] {
 <li>O tempo de entrega do pedido segue distribuição normal?</li>
 <li>Construa gráficos de controle e analise-os. Caso não exibam controle estatístico, revise os limites de controle tentativos.</li>
 </ol>
+<p><strong>SOLUÇÃO:</strong></p>
+<section id="item-4a." class="level4">
+<h4 class="anchored" data-anchor-id="item-4a.">Item 4a.</h4>
+<div class="cell" data-layout-align="center">
+<div class="cell-output-display">
+
+<div class="datatables html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-7ebcf0a4d8428fb1cb37" style="width:100%;height:auto;"></div>
+<script type="application/json" data-for="htmlwidget-7ebcf0a4d8428fb1cb37">{"x":{"filter":"none","vertical":false,"extensions":["FixedHeader"],"caption":"<caption>Tabela 2: Resultado do teste de normalidade de Shapiro-Wilk.<\/caption>","data":[[0.966134252954202],[0.439488871198518]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>Estatística<\/th>\n      <th>p-value<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"dom":"t","fixedHeader":false,"autoWidth":false,"columnDefs":[{"targets":-1,"render":"function(data, type, row, meta) {\n    return type !== 'display' ? data : DTWidget.formatRound(data, 4, 3, \".\", \",\", null);\n  }"},{"targets":0,"render":"function(data, type, row, meta) {\n    return type !== 'display' ? data : DTWidget.formatRound(data, 4, 3, \".\", \",\", null);\n  }"},{"className":"dt-center","targets":[0,1]}],"order":[],"orderClasses":false}},"evals":["options.columnDefs.0.render","options.columnDefs.1.render"],"jsHooks":[]}</script>
+</div>
+<div class="cell-output-display">
+<div class="quarto-figure quarto-figure-center">
+<figure class="figure">
+<p><img src="L2_files/figure-html/unnamed-chunk-3-2.png" class="img-fluid figure-img" width="864"></p>
+</figure>
+</div>
+</div>
+</div>
+<p>&nbsp;</p>
+<p>Com base no teste de normalidade realizado é possível concluir a existência de normalidade, através da não rejeição da hipótese nula (<span class="math inline">\(H_0\)</span>) que afirma normalidade dos dados. O resultado do teste é confirmado através dos gráficos gerados, sendo possível identificar uma certa simetria entre os dados pelo Histograma bem como a normalidade por meio do QQ Plot.</p>
+</section>
+<section id="item-4b." class="level4">
+<h4 class="anchored" data-anchor-id="item-4b.">Item 4b.</h4>
+<p>Tendo em vista que a quantidade de observações por amostra é igual a 1, o gráfico <strong>Gráfico R</strong> é o mais recomendado para análise solicitada.</p>
+<div class="cell" data-layout-align="center">
+<div class="cell-output-display">
+<div class="quarto-figure quarto-figure-center">
+<figure class="figure">
+<p><img src="L2_files/figure-html/unnamed-chunk-4-1.png" class="img-fluid figure-img" width="864"></p>
+</figure>
+</div>
+</div>
+</div>
+</section>
 </section>
 <section id="exercício-5." class="level2">
 <h2 class="anchored" data-anchor-id="exercício-5.">Exercício 5.</h2>
@@ -202,6 +244,18 @@ ul.task-list li input[type="checkbox"] {
 <li>Construa gráficos de controle usando esses dados. O processo está sob controle estatístico?</li>
 <li>Supondo que tenha sido identificada uma causa responsável pela falta de controle pontual das amostras identificadas no item anterior, refaça a análise sem tais amostras e descubra se há mais sinais de descontrole do processo.</li>
 </ol>
+<p><strong>SOLUÇÃO:</strong></p>
+<section id="item-5a." class="level4">
+<h4 class="anchored" data-anchor-id="item-5a.">Item 5a.</h4>
+<div class="cell">
+<div class="cell-output-display">
+<p><img src="L2_files/figure-html/unnamed-chunk-5-1.png" class="img-fluid" width="864"></p>
+</div>
+</div>
+</section>
+<section id="item-5b." class="level4">
+<h4 class="anchored" data-anchor-id="item-5b.">Item 5b.</h4>
+</section>
 </section>
 <section id="exercício-6." class="level2">
 <h2 class="anchored" data-anchor-id="exercício-6.">Exercício 6.</h2>
